Preventing large images to overflow the content

--- a/src/sass/_post.scss
+++ b/src/sass/_post.scss
@@ -13,6 +13,9 @@
 
 .article-section {
     margin-bottom: 3rem;
+    & img {
+        max-width: 100%;
+    }
 }
 
 .list-section ul {
